Changes to max width on mobile mode to make sure they line up

--- a/src/components/filters/filter/styles.css
+++ b/src/components/filters/filter/styles.css
@@ -43,6 +43,6 @@
 
 @media screen and (max-width: 1200px) {
     .Filter {
-        max-width: 720px;
+        max-width: 690px;
     }
 }
