--- a/src/components/hotelCard/styles.css
+++ b/src/components/hotelCard/styles.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-wrap: wrap;
     position: relative;
-    max-width: 900px;
+    max-width: 720px;
 }
 
 .hotel-card .hotel-image {
